--- a/CommandsService/Properties/launchSettings.json
+++ b/CommandsService/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:20395",
-      "sslPort": 44371
+      "applicationUrl": "http://localhost:43929",
+      "sslPort": 44316
     }
   },
   "profiles": {
-    "CommandService": {
+    "CommandsService": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7162;http://localhost:5154",
+      "applicationUrl": "https://localhost:7187;http://localhost:5009",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
